--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">MaruVel</a>.
+    Coded by <a href="https://github.com/maruvel">MaruVel</a>.
   </div>
 </body>
 
